--- a/tinker/events/templates/submit-confirm.html
+++ b/tinker/events/templates/submit-confirm.html
@@ -1,33 +1,38 @@
 {% extends "tinker_base.html" %}
 
-{% block title %}Success{% endblock %}
+{% set title = "Events" %}
 
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
 
-  <div class="row">
-    <div class="large-12 columns">
+    <div class="content">
+        <div class="container-fluid">
+            <div class="col-md-12">
 
-        <h3>
-          Thanks for your submission!
-        </h3>
+                <h3 class="first-subtitle">
+                    Thanks for your submission!
+                </h3>
 
 
-        <p>You'll receive an email when your event has been approved by Conference and Event Services. Once your event has been approved, it will appear on your Tinker <a href="/event">events page</a> where you'll be able to view the event page or make changes to it.</p>
+                <p>You'll receive an email when your event has been approved by Conference and Event Services. Once your
+                    event has been approved, it will appear on your Tinker <a href="/event">events page</a> where you'll
+                    be able to view the event page or make changes to it.</p>
 
-        <p>If you have any questions, please contact Conference and Event Services at conference-event@bethel.edu or 651.638.6090.</p>
+                <p>If you have any questions, please contact Conference and Event Services at
+                    conference-event@bethel.edu or 651.638.6090.</p>
 
-        <p><a href="https://www.bethel.edu/events/calendar/" class="small button">Back to Calendar</a></p>
+                <p><a href="https://www.bethel.edu/events/calendar/" class="small btn btn-primary">Back to Calendar</a></p>
 
-        <p>
-          Take a short break in your day and enjoy this GIF!
-        </p>
-        <p>
-          <img src="//cdn1.bethel.edu/gif/penguins.gif" />
-        </p>
+                <p>
+                    Take a short break in your day and enjoy this GIF!
+                </p>
+                <p>
+                    <img src="//cdn1.bethel.edu/gif/penguins.gif"/>
+                </p>
 
+            </div>
+        </div>
     </div>
-  </div>
 
 {% endblock %}
