--- a/tinker/static/assets/css/tinker.css
+++ b/tinker/static/assets/css/tinker.css
@@ -15,7 +15,13 @@ h3 {
     margin-bottom: -10px;
 }
 
+.first-subtitle {
+    margin-top: 0px;
+}
+
 label.checkbox-radio-label {
+    padding-top: 3px;
+    padding-left: 0px;
     margin-bottom: 0px!important;
 }
 
@@ -65,6 +71,10 @@ ul.dropdown-menu {
     border-radius: 6px;
     margin-top: 8px;
     box-shadow: 0 2px rgba(17, 16, 15, 0.1), 0 2px 10px rgba(17, 16, 15, 0.1) !important;
+}
+
+a#event-create {
+    margin-bottom: 15px;
 }
 
 .btn {
@@ -125,6 +135,29 @@ a#remove_new_job_button {
 .btn-alert {
     background-color: #DE8626 !important;
     border-color: #DE8626 !important;
+}
+
+.error-alert {
+    padding: 15px 0px 15px 0px;
+    border: 1px solid transparent
+}
+
+.red-alert {
+    background-color: #f04124;
+    border-color: #de2d0f;
+    font-size: 12px;
+    color: #FFFFFF;
+    display: block;
+    border-radius: 4px;
+    font-weight: normal;
+    position: relative;
+    padding: 10px 15px 10px 15px;
+    transition: opacity 300ms ease-out
+
+}
+
+.close {
+    margin-top: -2px;
 }
 
 ul.btn-group-horizontal {
