Updated unit testing suite for Events

--- a/tinker/events/templates/submit-confirm.html
+++ b/tinker/events/templates/submit-confirm.html
@@ -8,6 +8,7 @@
 
   <div class="row">
     <div class="large-12 columns">
+        <input type="hidden" id="new_eid" value="{{ eid }}"/>
 
         <h3>
           Thanks for your submission!
