--- a/tinker/templates/home.html
+++ b/tinker/templates/home.html
@@ -15,7 +15,8 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <img src="get-image/events-icon.png"/>
+                            <a href="{{ url_for('events.EventsView:index') }}"><img
+                                    src="get-image/events-icon.png"/></a>
                         </div>
                     </div>
                 </div>
@@ -27,7 +28,8 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <img src="get-image/faculty-bio-icon.png"/>
+                            <a href="{{ url_for('faculty-bio.FacultyBioView:index') }}"><img
+                                    src="get-image/faculty-bio-icon.png"/></a>
                         </div>
                     </div>
                 </div>
@@ -39,7 +41,8 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <img src="get-image/e-announcement.png">
+                            <a href="{{ url_for('e-announcements.EAnnouncementsView:index') }}"><img
+                                    src="get-image/e-announcement.png"></a>
                         </div>
                     </div>
                 </div>
@@ -51,7 +54,8 @@
                     </div>
                     <div class="content">
                         <div class="icon-big icon-warning text-center">
-                            <img src="get-image/redirect-icon.png"/>
+                            <a href="{{ url_for('redirects.RedirectsView:index') }}"><img
+                                    src="get-image/redirect-icon.png"/></a>
                         </div>
                     </div>
                 </div>
