--- a/tinker/templates/dashboard.html
+++ b/tinker/templates/dashboard.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="utf-8"/>
-    <link rel="apple-touch-icon" sizes="76x76" href="http://127.0.0.1:5000/static/assets/img/apple-icon.png">
-    <link rel="icon" type="image/png" sizes="96x96" href="http://127.0.0.1:5000/static/assets/img/favicon.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="/static/assets/img/apple-icon.png">
+    <link rel="icon" type="image/png" sizes="96x96" href="/static/assets/img/favicon.png">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
 
     <title>Paper Dashboard by Creative Tim</title>
@@ -14,23 +14,23 @@
 
 
     <!-- Bootstrap core CSS     -->
-    <link href="http://127.0.0.1:5000/static/assets/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet"/>
 
     <!-- Animation library for notifications   -->
-    <link href="http://127.0.0.1:5000/static/assets/css/animate.min.css" rel="stylesheet"/>
+    <link href="/static/assets/css/animate.min.css" rel="stylesheet"/>
 
     <!--  Paper Dashboard core CSS    -->
-    <link href="http://127.0.0.1:5000/static/assets/css/paper-dashboard.css" rel="stylesheet"/>
+    <link href="/static/assets/css/paper-dashboard.css" rel="stylesheet"/>
 
 
     <!--  CSS for Demo Purpose, don't include it in your project     -->
-    <link href="http://127.0.0.1:5000/static/assets/css/demo.css" rel="stylesheet"/>
+    <link href="/static/assets/css/demo.css" rel="stylesheet"/>
 
 
     <!--  Fonts and icons     -->
     <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-    <link href="http://127.0.0.1:5000/static/assets/css/themify-icons.css" rel="stylesheet">
+    <link href="/static/assets/css/themify-icons.css" rel="stylesheet">
 </head>
 
 
@@ -198,26 +198,26 @@
 </body>
 
 <!--   Core JS Files   -->
-<script src="http://127.0.0.1:5000/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-<script src="http://127.0.0.1:5000/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
+<script src="/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
 <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-<script src="http://127.0.0.1:5000/static/assets/js/paper-dashboard.js"></script>
+<script src="/static/assets/js/paper-dashboard.js"></script>
 
 <!--  Checkbox, Radio & Switch Plugins -->
-<script src="http://127.0.0.1:5000/static/assets/js/bootstrap-checkbox-radio.js"></script>
+<script src="/static/assets/js/bootstrap-checkbox-radio.js"></script>
 
 <!--  Charts Plugin -->
-<script src="http://127.0.0.1:5000/static/assets/js/chartist.min.js"></script>
+<script src="/static/assets/js/chartist.min.js"></script>
 
 <!--  Notifications Plugin    -->
-<script src="http://127.0.0.1:5000/static/assets/js/bootstrap-notify.js"></script>
+<script src="/static/assets/js/bootstrap-notify.js"></script>
 
 <!--  Google Maps Plugin    -->
 <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 
 
 <!-- Paper Dashboard DEMO methods, don't include it in your project! -->
-<script src="http://127.0.0.1:5000/static/assets/js/demo.js"></script>
+<script src="/static/assets/js/demo.js"></script>
 
 <script type="text/javascript">
     $(document).ready(function () {
