--- a/tinker/templates/creativeTim_base.html
+++ b/tinker/templates/creativeTim_base.html
@@ -19,24 +19,22 @@
             <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
             <meta name="viewport" content="width=device-width"/>
 
-            <link href="/static/assets/css/tinker.css" rel="stylesheet"/>
-
-            <!-- Bootstrap core CSS     -->
-            <link href="/static/assets/css/bootstrap.min.css" rel="stylesheet"/>
-
-            <!-- Animation library for notifications   -->
-            <link href="/static/assets/css/animate.min.css" rel="stylesheet"/>
-
-            <!--  Paper Dashboard core CSS    -->
-            <link href="/static/assets/css/paper-dashboard.css" rel="stylesheet"/>
-
             <!-- Tinker's specific core CSS -->
             <link href="/static/assets/css/tinker.css" rel="stylesheet"/>
 
+            <!-- Bootstrap core CSS     -->
+            <link href="https://cdn1.bethel.edu/tinker/css/bootstrap.min.css" rel="stylesheet"/>
+
+            <!-- Animation library for notifications   -->
+            <link href="https://cdn2.bethel.edu/tinker/css/animate.min.css" rel="stylesheet"/>
+
+            <!--  Paper Dashboard core CSS    -->
+            <link href="https://cdn3.bethel.edu/tinker/css/paper-dashboard.css" rel="stylesheet"/>
+
             <!--  Fonts and icons     -->
-            <link href="http://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
+            <link href="https://maxcdn.bootstrapcdn.com/font-awesome/latest/css/font-awesome.min.css" rel="stylesheet">
             <link href='https://fonts.googleapis.com/css?family=Muli:400,300' rel='stylesheet' type='text/css'>
-            <link href="/static/assets/css/themify-icons.css" rel="stylesheet">
+            <link href="https://cdn3.bethel.edu/tinker/css/themify-icons.css" rel="stylesheet">
         {% endblock %}
     </head>
 
@@ -47,23 +45,23 @@
     {% block scripts %}{% endblock %}
 
     <!--   Core JS Files   -->
-    <script src="/static/assets/js/jquery-1.10.2.js" type="text/javascript"></script>
-    <script src="/static/assets/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="https://cdn4.bethel.edu/tinker/js/jquery-1.10.2.js" type="text/javascript"></script>
+    <script src="https://cdn1.bethel.edu/tinker/js/bootstrap.min.js" type="text/javascript"></script>
 
     <!--  Checkbox, Radio & Switch Plugins -->
-    <script src="/static/assets/js/bootstrap-checkbox-radio.js"></script>
+    <script src="https://cdn2.bethel.edu/tinker/js/bootstrap-checkbox-radio.js"></script>
 
     <!--  Charts Plugin -->
-    <script src="/static/assets/js/chartist.min.js"></script>
+    <script src="https://cdn3.bethel.edu/tinker/js/chartist.min.js"></script>
 
     <!--  Notifications Plugin    -->
-    <script src="/static/assets/js/bootstrap-notify.js"></script>
+    <script src="https://cdn4.bethel.edu/tinker/js/bootstrap-notify.js"></script>
 
     <!--  Google Maps Plugin    -->
     <script type="text/javascript" src="https://maps.googleapis.com/maps/api/js"></script>
 
     <!-- Paper Dashboard Core javascript and methods for Demo purpose -->
-    <script src="/static/assets/js/paper-dashboard.js"></script>
+    <script src="https://cdn1.bethel.edu/tinker/js/paper-dashboard.js"></script>
 
 
     {{ nav_collapse.render() }}
