--- a/tinker/admin/sync/templates/sync.html
+++ b/tinker/admin/sync/templates/sync.html
@@ -5,7 +5,7 @@
 {% block page_title %}Bethel University Tinker{% endblock %}
 
 {% block main_content %}
-<a href="/admin/sync/all" class="small button success">Sync</a>
+<a href='{{ url_for('sync.SyncView:all') }}' class="small button success">Sync</a>
 <!-- Todo: make this more dynamic -->
 <h3>Current Values:</h3>
     {% for key in data %}
