--- a/tinker/events/templates/event-in-workflow.html
+++ b/tinker/events/templates/event-in-workflow.html
@@ -13,7 +13,7 @@
           Edits pending approval
         </h3>
 
-        <p>Your edits are pending approval. Please wait until they have been approved before you make additional edits. Go back to your <a href="/event">events</a>.</p>
+        <p>Your edits are pending approval. Please wait until they have been approved before you make additional edits. Go back to your <a href="{{ url_for('events.EventsView:index') }}">events</a>.</p>
 
 
     </div>
