--- a/tinker/admin/publish/templates/publish-home.html
+++ b/tinker/admin/publish/templates/publish-home.html
@@ -11,7 +11,7 @@
 
 {% block main_content %}
 <h3>Here are the automated publishers</h3>
-<a href='/admin/publish-manager/program-feeds' class="button">Program Feeds</a>
+<a href='{{ url_for('publish-manager.PublishManagerView:publish_program_feeds')}}' class="button">Program Feeds</a>
 
 <p>Blocks that are published publish out each page in the relationships tab.</p>
 
