--- a/tinker/admin/redirects/templates/redirects.html
+++ b/tinker/admin/redirects/templates/redirects.html
@@ -14,22 +14,25 @@
                     <form action="" id="new-redirect-form">
                         <div class="row job">
                             <div class="col-sm-4">
-                                <div class="form-group">
-                                    From Path:
-                                    <input type="text" id="new-redirect-from" class="form-control no-margin-bottom"/>
-                                </div>
+                                {#                                <div class="form-group">#}
+                                From Path:
+                                <input type="text" name="new-redirect-from" id="new-redirect-from"
+                                       class="form-control no-margin-bottom"/>
+                                {#                                </div>#}
                             </div>
                             <div class="col-sm-4">
-                                <div class="form-group">
-                                    To URL:
-                                    <input type="text" id="new-redirect-to" class="form-control no-margin-bottom"/>
-                                </div>
+                                {#                                <div class="form-group">#}
+                                To URL:
+                                <input type="text" name="new-redirect-to" id="new-redirect-to"
+                                       class="form-control no-margin-bottom"/>
+                                {#                                </div>#}
                             </div>
                             <div class="col-sm-4">
-                                <div class="form-group">
-                                    Expiration Date:
-                                    <input type="text" id="expiration-date" class="form-control no-margin-bottom"/>
-                                </div>
+                                {#                                <div class="form-group">#}
+                                Expiration Date:
+                                <input type="text" name="expiration-date" id="expiration-date"
+                                       class="form-control no-margin-bottom"/>
+                                {#                                </div>#}
                             </div>
                         </div>
                         <div class="content job">
@@ -80,15 +83,16 @@
                     var this_val = $(this).html();
                     if (search_val == this_val) {
                         $("#new-redirect-to").val('');
-                        $('#new-redirect-to').attr("disabled", true);
+                        $("#new-redirect-from").val('');
+                        $("#expiration-date").val('');
                         return false;
                     }
                 });
-{#                $(".redirect-row").on('click', function () {#}
-{#                    $("#modal-confirm").attr("data-delete-path", $(this).find('.from_path').html());#}
-{#                    $(document).foundation();#}
-{#                    $("#confirmModal").foundation('reveal', 'open');#}
-{#                });#}
+                {#                $(".redirect-row").on('click', function () {#}
+                {#                    $("#modal-confirm").attr("data-delete-path", $(this).find('.from_path').html());#}
+                {#                    $(document).foundation();#}
+                {#                    $("#confirmModal").foundation('reveal', 'open');#}
+                {#                });#}
             }
 
             var delay = (function () {
@@ -117,9 +121,9 @@
                 var input = $(this);
                 input.val(input.val().replace(/ /g, ''));
                 var value = input.val();
-                    delay(function(){
-                      loadTableForSearch(value, 'to_url');
-                    }, 300 );
+                delay(function () {
+                    loadTableForSearch(value, 'to_url');
+                }, 300);
             });
 
             $('#new-redirect-from').keyup(function () {
@@ -136,7 +140,6 @@
             });
 
             $(document).ready(function () {
-                console.log("Reached");
                 var d = document;
                 var input = $(d.getElementsByClassName('btn-primary'));
                 input.attr('value', 'Save');
@@ -147,27 +150,26 @@
                     document.getElementById('redirect-add').disabled = true;
                     // when 'save' is clicked, gather the field mappings and send those
                     // to the wufoo-silva app for storage
-                    var fieldMappings = $(this.form).serializeArray(),
+                    var fieldMappings = $(":input").serializeArray(),
                             url = "{{ url_for('redirects.RedirectsView:new_redirect_submit') }}";
-                    $.ajaxSetup({ url: url, data: fieldMappings, success: function (data) {
+                    $.post(url, fieldMappings, function (data) {
                         loadTableForSearch($('#new-redirect-from').val(), 'from_path');
                         document.getElementById('redirect-add').disabled = false;
-                    }});
+                    });
 
                 });
                 $("#redirect-add").append(input);
 
-{#                $("#modal-confirm").click(function () {#}
-{##}
-{#                    var from_path = {"from_path": $(this).attr('data-delete-path')};#}
-{#                    var url = "{{ url_for('redirects.RedirectsView:delete_redirect') }}";#}
-{#                    $.post(url, from_path, function (data) {#}
-{#                        if (data) {#}
-{#                            loadTableForSearch($("#new-redirect-from").val(), 'from_path');#}
-{#                                                        $("#confirmModal").foundation('reveal', 'close');#}
-{#                        }#}
-{#                    });#}
-{#                });#}
+                $(".btn-simple").click(function () {
+                    var from_path = {"from_path": $(this).attr('data-delete-path')};
+                    var url = "{{ url_for('redirects.RedirectsView:delete_redirect') }}";
+                    $.post(url, from_path, function (data) {
+                        if (data) {
+                            loadTableForSearch($("#new-redirect-from").val(), 'from_path');
+                            {#                            $("#confirmModal").foundation('reveal', 'close');#}
+                        }
+                    });
+                });
 
             });
 
@@ -175,14 +177,26 @@
         ;
     </script>
 
-        Delete confirm modal
-        <div id="confirmModal" class="reveal-modal" data-reveal>
-            <h2>Are you sure you want to delete?</h2>
-            <p class="lead">The redirect will be gone forever and forever.</p>
 
-            <button class="modal-confirm" id="modal-confirm" data-delete-path="/delete/path">Delete</button>
-            <a class="close-reveal-modal">&#215;</a>
+    <!-- Modal Core -->
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content" id="confirmModal" class="reveal-modal" data-reveal>
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">Are you sure you want to delete?</h4>
+                </div>
+                <div class="modal-body">
+                    <p class="lead">Your redirect will be gone forever and ever.</p>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default btn-simple" data-dismiss="modal"
+                            data-delete-path="/delete/path">Delete
+                    </button>
+                </div>
+            </div>
         </div>
+    </div>
 
 {% endblock %}
 
