--- a/tinker/templates/nav.html
+++ b/tinker/templates/nav.html
@@ -9,7 +9,7 @@
                     <span class="icon-bar bar2"></span>
                     <span class="icon-bar bar3"></span>
                 </button>
-                <a class="navbar-brand" href="#">{{ title }}</a>
+                <a class="navbar-brand">{{ title }}</a>
             </div>
         </div>
     </nav>
