--- a/tinker/admin/program_search/templates/program-search-ajax.html
+++ b/tinker/admin/program_search/templates/program-search-ajax.html
@@ -1,7 +1,7 @@
 {% for row in search_results %}
   <tr id='{{ row.id }}' class="program-search-row table-hover">
     <td >
-        <span class="key">{{ row.key }}</span>
+        <span class="key">{{ row.actual_name }}</span>
     </td>
     <td>
         <span class="tag">{{ row.tag }}</span>
@@ -26,6 +26,9 @@
             X
         {% endif %}
         </span>
+    </td>
+    <td>
+        <input type="checkbox" class="delete-checkbox" id="{{ row.id }}"/>
     </td>
   </tr>
 {% endfor %}
